fixing contrasting issues with website

--- a/css/main.scss
+++ b/css/main.scss
@@ -18,13 +18,13 @@ $spacing-unit:     30px;
 
 $text-color:       #111;
 $background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$brand-color:      #0874df;
 
 $grey-color:       #828282;
 $light-grey:       #F2F1EF;
 $blue-color:       #17223C;
 $pink-color:       #F49BC2;
-$dark-pink-color:  #FF5AF7;
+$dark-pink-color:  #c400bd;
 $purple-color:     #313887;
 $lt-purple-color:  #505085;
 $grey-color-light: lighten($grey-color, 40%);
